--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-session": "^1.17.0",
+    "moment": "^2.25.1",
     "mongoose": "^5.2.10",
     "morgan": "^1.9.0",
     "node-sass-middleware": "^0.11.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "plaid": "^4.11.0",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
