--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcrypt": "^4.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "cloudinary": "^1.21.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
     "dotenv": "^6.0.0",
@@ -19,11 +20,15 @@
     "moment": "^2.25.1",
     "mongoose": "^5.2.10",
     "morgan": "^1.9.0",
+    "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^2.2.1",
+    "node-cron": "^2.0.3",
     "node-sass-middleware": "^0.11.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "plaid": "^4.11.0",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "twilio": "^3.43.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
