--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-session": "^1.17.0",
+    "is-empty": "^1.2.0",
     "moment": "^2.25.1",
     "mongoose": "^5.2.10",
     "morgan": "^1.9.0",
@@ -28,7 +29,8 @@
     "passport-local": "^1.0.0",
     "plaid": "^4.11.0",
     "serve-favicon": "^2.5.0",
-    "twilio": "^3.43.0"
+    "twilio": "^3.43.0",
+    "validator": "^13.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
